--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ clap = {version = "4.2.1", features = ["derive"]}
 clap_complete = "4.2.0"
 clap_complete_fig = "4.2.0"
 git2 = "0.17.0"
+regex = "1.7.3"
 serde = "1.0.159"
