--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,4 @@ clap_complete = "4.2.0"
 clap_complete_fig = "4.2.0"
 git2 = "0.17.0"
 regex = "1.7.3"
-serde = "1.0.159"
+serde = {version = "1.0.159", features = ["derive"]}
